pywrapper/src/pyciaaw/ciaaw_saw.h

struct ciaaw_saw_element_t{
    char element[25];
    char symbol[9];
    int z;
    double saw_min;
    double saw_max;
    double saw;
    double saw_u;
    double asaw;
    double asaw_u;
};
ADD_IMPORT extern const int ciaaw_saw_YEAR;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_H;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_He;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Li;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Be;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_B;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_C;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_N;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_O;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_F;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ne;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Na;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Mg;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Al;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Si;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_P;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_S;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cl;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ar;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_K;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ca;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Sc;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ti;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_V;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cr;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Mn;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Fe;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Co;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ni;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cu;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Zn;