src/capi_saw_2021.f90

module ciaaw__capi_saw_2021
    !! Codata Constants - Autogenerated: C API.
    use iso_c_binding, only: c_null_char, c_int
    use ciaaw__saw_2021
    use ciaaw__capi_saw_type
    private

integer(c_int), protected, public, bind(C, name="ciaaw_saw_YEAR") :: capi_YEAR = YEAR !capi

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_H") ::&
capi_0 = capi_saw_type(&
["h","y","d","r","o","g","e","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H",c_null_char," "," "," "," "," "," "," "], &
H%z, &
H%saw_min, &
H%saw_max, &
H%saw, &
H%saw_u, &
H%asaw, &
H%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_He") ::&
capi_1 = capi_saw_type(&
["h","e","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","e",c_null_char," "," "," "," "," "," "], &
He%z, &
He%saw_min, &
He%saw_max, &
He%saw, &
He%saw_u, &
He%asaw, &
He%saw_u, &
["g"," ","r",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Li") ::&
capi_2 = capi_saw_type(&
["l","i","t","h","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","i",c_null_char," "," "," "," "," "," "], &
Li%z, &
Li%saw_min, &
Li%saw_max, &
Li%saw, &
Li%saw_u, &
Li%asaw, &
Li%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Be") ::&
capi_3 = capi_saw_type(&
["b","e","r","y","l","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","e",c_null_char," "," "," "," "," "," "], &
Be%z, &
Be%saw_min, &
Be%saw_max, &
Be%saw, &
Be%saw_u, &
Be%asaw, &
Be%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_B") ::&
capi_4 = capi_saw_type(&
["b","o","r","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B",c_null_char," "," "," "," "," "," "," "], &
B%z, &
B%saw_min, &
B%saw_max, &
B%saw, &
B%saw_u, &
B%asaw, &
B%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_C") ::&
capi_5 = capi_saw_type(&
["c","a","r","b","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C",c_null_char," "," "," "," "," "," "," "], &
C%z, &
C%saw_min, &
C%saw_max, &
C%saw, &
C%saw_u, &
C%asaw, &
C%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_N") ::&
capi_6 = capi_saw_type(&
["n","i","t","r","o","g","e","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N",c_null_char," "," "," "," "," "," "," "], &
N%z, &
N%saw_min, &
N%saw_max, &
N%saw, &
N%saw_u, &
N%asaw, &
N%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_O") ::&
capi_7 = capi_saw_type(&
["o","x","y","g","e","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O",c_null_char," "," "," "," "," "," "," "], &
O%z, &
O%saw_min, &
O%saw_max, &
O%saw, &
O%saw_u, &
O%asaw, &
O%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_F") ::&
capi_8 = capi_saw_type(&
["f","l","u","o","r","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F",c_null_char," "," "," "," "," "," "," "], &
F%z, &
F%saw_min, &
F%saw_max, &
F%saw, &
F%saw_u, &
F%asaw, &
F%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ne") ::&
capi_9 = capi_saw_type(&
["n","e","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","e",c_null_char," "," "," "," "," "," "], &
Ne%z, &
Ne%saw_min, &
Ne%saw_max, &
Ne%saw, &
Ne%saw_u, &
Ne%asaw, &
Ne%saw_u, &
["g"," ","m",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Na") ::&
capi_10 = capi_saw_type(&
["s","o","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","a",c_null_char," "," "," "," "," "," "], &
Na%z, &
Na%saw_min, &
Na%saw_max, &
Na%saw, &
Na%saw_u, &
Na%asaw, &
Na%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Mg") ::&
capi_11 = capi_saw_type(&
["m","a","g","n","e","s","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","g",c_null_char," "," "," "," "," "," "], &
Mg%z, &
Mg%saw_min, &
Mg%saw_max, &
Mg%saw, &
Mg%saw_u, &
Mg%asaw, &
Mg%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Al") ::&
capi_12 = capi_saw_type(&
["a","l","u","m","i","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","l",c_null_char," "," "," "," "," "," "], &
Al%z, &
Al%saw_min, &
Al%saw_max, &
Al%saw, &
Al%saw_u, &
Al%asaw, &
Al%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Si") ::&
capi_13 = capi_saw_type(&
["s","i","l","i","c","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","i",c_null_char," "," "," "," "," "," "], &
Si%z, &
Si%saw_min, &
Si%saw_max, &
Si%saw, &
Si%saw_u, &
Si%asaw, &
Si%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_P") ::&
capi_14 = capi_saw_type(&
["p","h","o","s","p","h","o","r","u","s",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P",c_null_char," "," "," "," "," "," "," "], &
P%z, &
P%saw_min, &
P%saw_max, &
P%saw, &
P%saw_u, &
P%asaw, &
P%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_S") ::&
capi_15 = capi_saw_type(&
["s","u","l","f","u","r",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S",c_null_char," "," "," "," "," "," "," "], &
S%z, &
S%saw_min, &
S%saw_max, &
S%saw, &
S%saw_u, &
S%asaw, &
S%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cl") ::&
capi_16 = capi_saw_type(&
["c","h","l","o","r","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","l",c_null_char," "," "," "," "," "," "], &
Cl%z, &
Cl%saw_min, &
Cl%saw_max, &
Cl%saw, &
Cl%saw_u, &
Cl%asaw, &
Cl%saw_u, &
["m",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ar") ::&
capi_17 = capi_saw_type(&
["a","r","g","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","r",c_null_char," "," "," "," "," "," "], &
Ar%z, &
Ar%saw_min, &
Ar%saw_max, &
Ar%saw, &
Ar%saw_u, &
Ar%asaw, &
Ar%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_K") ::&
capi_18 = capi_saw_type(&
["p","o","t","a","s","s","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K",c_null_char," "," "," "," "," "," "," "], &
K%z, &
K%saw_min, &
K%saw_max, &
K%saw, &
K%saw_u, &
K%asaw, &
K%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ca") ::&
capi_19 = capi_saw_type(&
["c","a","l","c","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","a",c_null_char," "," "," "," "," "," "], &
Ca%z, &
Ca%saw_min, &
Ca%saw_max, &
Ca%saw, &
Ca%saw_u, &
Ca%asaw, &
Ca%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sc") ::&
capi_20 = capi_saw_type(&
["s","c","a","n","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","c",c_null_char," "," "," "," "," "," "], &
Sc%z, &
Sc%saw_min, &
Sc%saw_max, &
Sc%saw, &
Sc%saw_u, &
Sc%asaw, &
Sc%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ti") ::&
capi_21 = capi_saw_type(&
["t","i","t","a","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","i",c_null_char," "," "," "," "," "," "], &
Ti%z, &
Ti%saw_min, &
Ti%saw_max, &
Ti%saw, &
Ti%saw_u, &
Ti%asaw, &
Ti%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_V") ::&
capi_22 = capi_saw_type(&
["v","a","n","a","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["V",c_null_char," "," "," "," "," "," "," "], &
V%z, &
V%saw_min, &
V%saw_max, &
V%saw, &
V%saw_u, &
V%asaw, &
V%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cr") ::&
capi_23 = capi_saw_type(&
["c","h","r","o","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","r",c_null_char," "," "," "," "," "," "], &
Cr%z, &
Cr%saw_min, &
Cr%saw_max, &
Cr%saw, &
Cr%saw_u, &
Cr%asaw, &
Cr%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Mn") ::&
capi_24 = capi_saw_type(&
["m","a","n","g","a","n","e","s","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","n",c_null_char," "," "," "," "," "," "], &
Mn%z, &
Mn%saw_min, &
Mn%saw_max, &
Mn%saw, &
Mn%saw_u, &
Mn%asaw, &
Mn%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Fe") ::&
capi_25 = capi_saw_type(&
["i","r","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","e",c_null_char," "," "," "," "," "," "], &
Fe%z, &
Fe%saw_min, &
Fe%saw_max, &
Fe%saw, &
Fe%saw_u, &
Fe%asaw, &
Fe%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Co") ::&
capi_26 = capi_saw_type(&
["c","o","b","a","l","t",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","o",c_null_char," "," "," "," "," "," "], &
Co%z, &
Co%saw_min, &
Co%saw_max, &
Co%saw, &
Co%saw_u, &
Co%asaw, &
Co%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ni") ::&
capi_27 = capi_saw_type(&
["n","i","c","k","e","l",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","i",c_null_char," "," "," "," "," "," "], &
Ni%z, &
Ni%saw_min, &
Ni%saw_max, &
Ni%saw, &
Ni%saw_u, &
Ni%asaw, &
Ni%saw_u, &
["r",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cu") ::&
capi_28 = capi_saw_type(&
["c","o","p","p","e","r",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","u",c_null_char," "," "," "," "," "," "], &
Cu%z, &
Cu%saw_min, &
Cu%saw_max, &
Cu%saw, &
Cu%saw_u, &
Cu%asaw, &
Cu%saw_u, &
["r",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Zn") ::&
capi_29 = capi_saw_type(&
["z","i","n","c",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Z","n",c_null_char," "," "," "," "," "," "], &
Zn%z, &
Zn%saw_min, &
Zn%saw_max, &
Zn%saw, &
Zn%saw_u, &
Zn%asaw, &
Zn%saw_u, &
["r",c_null_char," "," "," "," "," "," "," "])
